# NoteClient2

./: .gitignore  CHANGELOG.md  LICENSE  README.md  prompt.txt  pyproject.toml  requirements.txt
NoteClient2/: __init__.py  auth.py  client.py  http.py  images.py  magazines.py  markdown_parser.py  utils.py
NoteClient2.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
