[project]
name = "NoteClient2"
version = "1.0.1"
description = "Unofficial Python client for posting articles to note.com"
keywords = ["note", "automation", "blog", "markdown", "playwright"]
authors = [{ name="INSANE", email="support@nao-kun.com" }]
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "License :: Other/Proprietary License",
  "Operating System :: OS Independent",
]
requires-python = ">=3.9"

dependencies = [
  "requests",
  "playwright",
]

[project.urls]
Homepage = "https://github.com/Mr-SuperInsane/NoteClient2"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"